--- a/src/app/components/lsidentifer-test/lsidentifer-test.component.html
+++ b/src/app/components/lsidentifer-test/lsidentifer-test.component.html
@@ -6,80 +6,109 @@
             </div>
             <div class="card-body">
                 <div>
-                    <h5 class="card-title">I learn better by reading what the teacher writes on the chalkboard</h5>
+                    <h2 class="card-title">I learn better by reading what the teacher writes on the chalkboard</h2>
                     <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
                     </p>
                 </div>
 
                 <div>
-                    <h5 class="card-title">When I read instructions, I remember them better.</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title">When I read instructions, I remember them better.</h2>
+                    <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
+                    </p>
                 </div>
 
                 <div>
-                    <h5 class="card-title">I understand better when I read instructions.</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title">I understand better when I read instructions.</h2>
+                    <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
+                    </p>
                 </div>
 
                 <div>
-                    <h5 class="card-title">I learn better by reading than by listening to someone.</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title">I learn better by reading than by listening to someone.</h2>
+                    <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
+                    </p>
                 </div>
 
                 <div>
-                    <h5 class="card-title">I learn more by reading textbooks than by listening to lectures.</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title">I learn more by reading textbooks than by listening to lectures.</h2>
+                    <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
+                    </p>
                 </div>
 
                 <div>
-                    <h5 class="card-title">When the teacher tells me the instructions I understand better</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title">When the teacher tells me the instructions I understand better</h2>
+                    <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
+                    </p>
                 </div>
 
                 <div>
-                    <h5 class="card-title">When someone tells me how to do something in class, I learn it better.</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title">When someone tells me how to do something in class, I learn it better.</h2>
+                    <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
+                    </p>
                 </div>
 
                 <div>
-                    <h5 class="card-title">I remember things I have heard in class better than things I have read.</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title">I remember things I have heard in class better than things I have read.</h2>
+                    <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
+                    </p>
                 </div>
 
                 <div>
-                    <h5 class="card-title">I learn better in class when the teacher gives a lecture.</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title">I learn better in class when the teacher gives a lecture.</h2>
+                    <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
+                    </p>
                 </div>
 
                 <div>
-                    <h5 class="card-title">I learn better in class when I listen to someone.</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title">I learn better in class when I listen to someone.</h2>
+                    <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
+                    </p>
                 </div>
 
                 <div>
-                    <h5 class="card-title">I prefer to learn by doing something in class.</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title">I prefer to learn by doing something in class.</h2>
+                    <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
+                    </p>
                 </div>
 
                 <div>
-                    <h5 class="card-title">When I do things in class, I learn better.</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title">When I do things in class, I learn better.</h2>
+                    <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
+                    </p>
                 </div>
 
 
                 <div>
-                    <h5 class="card-title">I enjoy learning in class by doing experiments.</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title">I enjoy learning in class by doing experiments.</h2>
+                    <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
+                    </p>
                 </div>
 
                 <div>
-                    <h5 class="card-title">I understand things better in class when I participate in role-playing.</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title">I understand things better in class when I participate in role-playing.</h2>
+                    <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
+                    </p>
                 </div>
 
                 <div>
-                    <h5 class="card-title">I understand things better in class when I participate in role-playing.</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title">I understand things better in class when I participate in role-playing.</h2>
+                    <p class="card-text">
+                        <p-rating iconOnClass="pi pi-circle-fill" iconOffClass="pi pi-circle" [cancel]="false"></p-rating>
+                    </p>
                 </div>
 
             
