--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,45 +1,3 @@
-// #main {
-//     transition: margin-left .5s;
-//     padding: 16px;
-//     margin-left:200px;
-// }
-
-///////////////////////////////////////////
-
-// .example-container {
-//     position: absolute;
-//     top: 60px;
-//     bottom: 60px;
-//     left: 0;
-//     right: 0;
-//   }
-  
-//   .example-sidenav {
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     width: 300px;
-//     background: rgba(61, 77, 255, 0.5);
-//   }
-  
-//   .example-header {
-//     position: fixed;
-//     top: 0;
-//     left: 0;
-//     right: 0;
-//   }
-  
-//   .example-footer {
-//     position: fixed;
-//     bottom: 0;
-//     left: 0;
-//     right: 0;
-//   }
-
-
-/////////////////////////////////////
-/// 
-/// 
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap');
 #wrapper{
     display: flex;
@@ -298,7 +256,7 @@
   }
 
   .toolbar-header{
-    background-color: #0072C0;
+    background-color: #212529;
     color: #ffffff;
     font-size: 1rem;
     
@@ -351,8 +309,61 @@
   }
 
   .sidenav-bar{
-    background-color: #0072C0;
+    background-color: #212529
+    ;
     overflow: hidden;
     width: 250px;
   }
+
+  .bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+  }
+
+  @media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+      font-size: 3.5rem;
+    }
+  }
+
+  .b-example-divider {
+    height: 3rem;
+    background-color: rgba(0, 0, 0, .1);
+    border: solid rgba(0, 0, 0, .15);
+    border-width: 1px 0;
+    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+  }
+
+  .b-example-vr {
+    flex-shrink: 0;
+    width: 1.5rem;
+    height: 100vh;
+  }
+
+  .bi {
+    vertical-align: -.125em;
+    fill: currentColor;
+  }
+
+  .nav-scroller {
+    position: relative;
+    z-index: 2;
+    height: 2.75rem;
+    overflow-y: hidden;
+  }
+
+  .nav-scroller .nav {
+    display: flex;
+    flex-wrap: nowrap;
+    padding-bottom: 1rem;
+    margin-top: -1px;
+    overflow-x: auto;
+    text-align: center;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+  }
+
   
