--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,56 @@
-<p>login works!</p>
+<div class="bg">
+    <main class="main">
+      <div class="container">
+        <section class="wrapper">
+          <div class="heading" style="text-align: center;">
+            <h1 class="text text-large" style="justify-content: center;">Sign In</h1>
+          </div>
+          <form name="signin" class="form" [formGroup]="form" (ngSubmit)="send()">
+            <div class="input-control">
+              <label for="email" class="input-label" hidden>Email</label>
+              <input type="email" name="email" id="email" class="input-field" placeholder="Email" formControlName="email">
+            </div>
+            <div class="input-control">
+              <label for="password" class="input-label" hidden>Password</label>
+              <input type="password" name="password" id="password" class="input-field" placeholder="Password" formControlName="password">
+            </div>
+            <div class="input-control">
+              <a href="#" class="text text-links">Forgot Password</a>
+              <input type="submit" name="submit" class="input-submit" value="Sign In">
+            </div>
+          </form>
+          <div class="striped">
+            <span class="striped-line"></span>
+            <span class="striped-text">Or</span>
+            <span class="striped-line"></span>
+          </div>
+          <!-- <div class="method">
+            <div class="method-control">
+              <a href="#" class="method-action">
+                <i class="ion ion-logo-google"></i>
+                <span>Sign in with Google</span>
+              </a>
+            </div>
+            <div class="method-control">
+              <a href="#" class="method-action">
+                <i class="ion ion-logo-facebook"></i>
+                <span>Sign in with Facebook</span>
+              </a>
+            </div>
+            <div class="method-control">
+              <a href="#" class="method-action">
+                <i class="ion ion-logo-apple"></i>
+                <span>Sign in with Apple</span>
+              </a>
+            </div>
+          </div> -->
+          <div style="text-align: center;">
+            <p class="text text-normal">Don't you have an Account? <br>
+              <span ><a [routerLink]="['/register']" class="text text-links">Create an account</a></span>
+            </p>
+          </div>
+          
+        </section>
+      </div>
+    </main>
+  </div>
