--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,120 @@
-<p>register works!</p>
+<!-- <mat-stepper #stepper>
+    <mat-step [stepControl]="firstFormGroup" errorMessage="Name is required.">
+      <form [formGroup]="firstFormGroup">
+        <ng-template matStepLabel>Fill out your name</ng-template>
+        <mat-form-field appearance="fill">
+          <mat-label>Name</mat-label>
+          <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+        </mat-form-field>
+        <div>
+          <p>Go to a different step to see the error state</p>
+          <button mat-button matStepperNext>Next</button>
+        </div>
+      </form>
+    </mat-step>
+    <mat-step [stepControl]="secondFormGroup" errorMessage="Address is required.">
+      <form [formGroup]="secondFormGroup">
+        <ng-template matStepLabel>Fill out your address</ng-template>
+        <mat-form-field appearance="fill">
+          <mat-label>Address</mat-label>
+          <input matInput placeholder="Ex. 1 Main St, New York, NY" formControlName="secondCtrl"
+                 required>
+        </mat-form-field>
+        <div>
+          <p>Go to a different step to see the error state</p>
+          <button mat-button matStepperPrevious>Back</button>
+          <button mat-button matStepperNext>Next</button>
+        </div>
+      </form>
+    </mat-step>
+    <mat-step>
+      <ng-template matStepLabel>Done</ng-template>
+      <p>You are now done.</p>
+      <div>
+        <button mat-button matStepperPrevious>Back</button>
+        <button mat-button (click)="stepper.reset()">Reset</button>
+      </div>
+    </mat-step>
+  </mat-stepper> -->
+  <p-toast position="top-center"></p-toast>
+  <div class="bg">
+    <main class="main">
+        <div class="container">
+          <section class="wrapper">
+            <div class="heading" style="text-align: center;">
+              <h1 class="text text-large" style="justify-content: center;">Sign Up</h1>
+            </div>
+            <form name="signin" class="form"  [formGroup]="form" (ngSubmit)="onSubmit()">
+              <div class="input-control">
+                <label for="fname" class="input-label" hidden>Full Name</label>
+                <input type="text" name="fname" id="fname" class="input-field" placeholder="Full Name" formControlName="fname">
+              </div>
+    
+              <!-- <div class="input-control">
+                <label for="username" class="input-label" hidden>Username</label>
+                <input type="text" name="username" id="username" class="input-field" placeholder="Username" formControlName="username">
+              </div> -->
+    
+              <div class="input-control">
+                <label for="email" class="input-label" hidden>Email Address</label>
+                <input type="email" name="email" id="email" class="input-field" placeholder="Email Address" formControlName="email">
+              </div>
+    
+              <div class="input-control">
+                <label for="password" class="input-label" hidden>Password</label>
+                <input type="password" name="password" id="password" class="input-field" placeholder="Password" formControlName="password">
+              </div>
+    
+              <div class="input-control">
+                <label for="cpassword" class="input-label" hidden>Confirm Password</label>
+                <input type="password" name="cpassword" id="cpassword" class="input-field" placeholder="Confirm Password" formControlName="cpassword">
+              </div>
+
+              <div class="input-control">
+                <mat-form-field class="example-full-width" style="width: 100%;">
+                    <mat-label>Leave a comment</mat-label>
+                    <textarea matInput placeholder="Ex. I need reading books and watch youtube..." formControlName="sentence"></textarea>
+                  </mat-form-field>
+              </div>
+              
+    
+              <div class="input-control" style="justify-content: center;">
+                <!-- <a href="#" class="text text-links">Forgot Password</a> -->
+                <input type="submit" name="submit" class="input-submit" value="Register">
+              </div>
+            </form>
+            <div class="striped">
+              <span class="striped-line"></span>
+              <span class="striped-text">Or</span>
+              <span class="striped-line"></span>
+            </div>
+            <!-- <div class="method">
+              <div class="method-control">
+                <a href="#" class="method-action">
+                  <i class="ion ion-logo-google"></i>
+                  <span>Sign in with Google</span>
+                </a>
+              </div>
+              <div class="method-control">
+                <a href="#" class="method-action">
+                  <i class="ion ion-logo-facebook"></i>
+                  <span>Sign in with Facebook</span>
+                </a>
+              </div>
+              <div class="method-control">
+                <a href="#" class="method-action">
+                  <i class="ion ion-logo-apple"></i>
+                  <span>Sign in with Apple</span>
+                </a>
+              </div>
+            </div> -->
+            <div style="text-align: center;">
+              <p class="text text-normal">Already you have an Account? <br>
+                <span ><a href="/" class="text text-links">Sign in</a></span>
+              </p>
+            </div>
+            
+          </section>
+        </div>
+      </main>
+      </div>
