--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,31 @@
-<p>admin-dashboard works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <h3>Users</h3>
+                <p>Number of registered users: 100</p>
+                <div class="card-footer">
+                    <a href="#">View details</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <h3>Orders</h3>
+                <p>Number of pending orders: 10</p>
+                <div class="card-footer">
+                    <a href="#">View details</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <h3>Revenue</h3>
+                <p>Total revenue: $1,000</p>
+                <div class="card-footer">
+                    <a href="#">View details</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
