--- a/src/app/components/lsidentifer-test/lsidentifer-test.component.html
+++ b/src/app/components/lsidentifer-test/lsidentifer-test.component.html
@@ -111,23 +111,8 @@
                     </p>
                 </div>
 
-            
-              
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">SUBMIT</a>
             </div>
         </div>
     </div>
